--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head lang="en">
     <meta charset="utf-8" />
     <title>spining donut </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <style>
       body {
         margin: 0;
@@ -13,7 +15,8 @@
   <body>
     <audio 
       id="myAuido"
-      style="position: absolute; margin: 1rem;"
+      style="position: absolute; margin: 1rem; bottom:0;
+      left:0;"
       src="./Funkytown.mp3" autoplay controls>  
     </audio>
     
